[package]
name = "mini-telegram"
version = "0.1.1"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/YumcoderCom/mini-telegram"
description = """
mini-telegram is an unofficial, monolithic, idiomatic implementation of MTProto (telegram) server built with Rust that compatible with all telegram clients (web, android, iOS, desktop).
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
